# emojis

./: .breakpoints  .replit  Procfile  keep_alive.py  nohup.out  packs.json  program.sh  pyproject.toml
bot/: __main__.py  background.py
data/: fontlist-v330.json
src/common/: common.py
src/exts/: fun.py  management.py  misc.py  utility.py
