[tool.poetry]
name = "repl_python3_beta_emojis"
version = "0.1.0"
description = ""
authors = ["DjStomp <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
motor = "^2.5.1"
pip = "^21.3"
Flask = "^2.0.2"
waitress = "^2.0.0"
replit = "^3.2.4"
disnake = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
